--- a/Forge/V3/src/main/resources/META-INF/mods.toml
+++ b/Forge/V3/src/main/resources/META-INF/mods.toml
@@ -12,7 +12,7 @@ description='''
 Custom Skin Loader for Minecraft
 '''
 displayURL="https://github.com/xfl03/MCCustomSkinLoader"
-authors=["xfl03", "JLChnToZ", "ZekerZhayard"]
+authors="xfl03, JLChnToZ, ZekerZhayard"
 [[dependencies.customskinloader]]
 modId="forge"
 mandatory=false
