--- a/Forge/V3/src/main/resources/META-INF/accesstransformer.cfg
+++ b/Forge/V3/src/main/resources/META-INF/accesstransformer.cfg
@@ -1,1 +1,3 @@
 public net.minecraft.resources.ResourceLocation <init>(Ljava/lang/String;Ljava/lang/String;)V # 24w18a+
+public net.minecraft.client.renderer.texture.SkinTextureDownloader processLegacySkin(Lcom/mojang/blaze3d/platform/NativeImage;Ljava/lang/String;)Lcom/mojang/blaze3d/platform/NativeImage; # 24w46a+
+public net.minecraft.client.renderer.texture.SkinTextureDownloader lambda$downloadAndRegisterSkin$0(Ljava/nio/file/Path;Ljava/lang/String;Z)Lcom/mojang/blaze3d/platform/NativeImage; # 24w46a+
