--- a/build.gradle
+++ b/build.gradle
@@ -44,6 +44,16 @@ subprojects {
         replace '@MOD_FULL_VERSION@', project.version
         replace '@MOD_BUILD_NUMBER@', VersionUtil.getBuildNum()
         replaceIn 'CustomSkinLoader.java'
+
+        makeObfSourceJar = false
+    }
+
+    if (project.name != "Dummy") {
+        configurations {
+            configureEach {
+                exclude module: "forgeSrc"
+            }
+        }
     }
 
     jar {
@@ -65,7 +75,7 @@ subprojects {
         archivesBaseName = "CustomSkinLoader_${-> VersionUtil.getEdition(project)}"
 
         processResources {
-            filesNotMatching(["**/*.js", "mixins.*.json"]) {
+            filesNotMatching(["**/*.js", "**/accesstransformer.cfg", "mixins.*.json"]) {
                 expand([
                         modVersion         : rootProject.ext.config.version,
                         modFullVersion     : project.version,
