--- a/settings.gradle
+++ b/settings.gradle
@@ -2,6 +2,7 @@ rootProject.name = "MCCustomSkinLoader"
 
 //Base Project
 include "Common"
+include "Dummy"
 
 //Vanilla Base Project
 include "Vanilla/Common"
