--- a/.github/workflows/common.yml
+++ b/.github/workflows/common.yml
@@ -171,7 +171,7 @@ jobs:
           prerelease: true
           body_path: build/ci-build.md
           files: build/libs/*
-          #iles: "${{ steps.cslenv-github.outputs.pathlist }}"
+          #files: "${{ steps.cslenv-github.outputs.pathlist }}"
       -
         if: ${{ matrix.website == 'GitHub-Release' && inputs.type == 'Release' }}
         uses: softprops/action-gh-release@v1
@@ -182,6 +182,14 @@ jobs:
           tag_name: ${{ github.ref }}
           #generate_release_notes: true
           files: ${{ steps.cslenv-github.outputs.pathlist }}
+      -
+        if: ${{ matrix.website == 'ObjectStorage' }}
+        name: "[ObjectStorage] Force JDK 8"
+        uses: actions/setup-java@v4
+        with:
+          distribution: 'temurin'
+          java-version: '8'
+          cache: 'gradle'
       -
         if: ${{ matrix.website == 'ObjectStorage' }}
         name: "[ObjectStorage] Publish"
